# chatbot-genai-template

./: CHANGELOG.md  README.md  cookiecutter.json
docs/: app-api.md  cookiecutter-questions.md
hooks/: post_gen_project.py
templates/: api-rag.md  api-structure.md  api-techstack.md
{{cookiecutter.project_name}}/: README.md
{{cookiecutter.project_name}}/apps/api/: .env.example  README.md  docker-compose.sql  docker-compose.yaml  pyproject.toml
{{cookiecutter.project_name}}/apps/api/migrations/: env.py
{{cookiecutter.project_name}}/apps/api/migrations/versions/: 0001_init.py  8c4bb5c53b7c_chats.py  e2cff8544b64_terms.py
{{cookiecutter.project_name}}/apps/api/run/: commands.py
{{cookiecutter.project_name}}/apps/api/tests/: conftest.py  default_env.py
{{cookiecutter.project_name}}/apps/api/tests/ai/assistants/: test_assistant_contracts.py  test_rag_assistant_contracts.py
{{cookiecutter.project_name}}/apps/api/tests/auth/: test_authenticator_contracts.py
{{cookiecutter.project_name}}/apps/api/tests/crud/: test_crud_contract.py  test_rag_document_crud_contract.py
{{cookiecutter.project_name}}/apps/api/tests/routers/v1/: test_chats_api_contract.py
{{cookiecutter.project_name}}/apps/api/{{cookiecutter.__api_package_name}}/ai/: __init__.py
{{cookiecutter.project_name}}/apps/api/{{cookiecutter.__api_package_name}}/ai/assistants/: __init__.py  abstract_assistant.py  conversation_assistant.py  conversation_retrieval_assistant.py  rag_document_retriever.py  subject_line_assistant.py  utils.py
{{cookiecutter.project_name}}/apps/api/{{cookiecutter.__api_package_name}}/ai/llms/: abstract_llm_provider.py  bedrock_llm_provider.py  openai_llm_provider.py  vertexai_llm_provider.py
{{cookiecutter.project_name}}/apps/api/{{cookiecutter.__api_package_name}}/app/: db.py  settings.py
{{cookiecutter.project_name}}/apps/api/{{cookiecutter.__api_package_name}}/app/schemas/: data_request.py  data_response.py  paginated_response.py  pagination.py  response_schemas.py
{{cookiecutter.project_name}}/apps/api/{{cookiecutter.__api_package_name}}/common/: sse.py
{{cookiecutter.project_name}}/apps/api/{{cookiecutter.__api_package_name}}/common/langchain/: bedrock.py
{{cookiecutter.project_name}}/apps/api/{{cookiecutter.__api_package_name}}/crud/: __init__.py  rag_document_crud.py
{{cookiecutter.project_name}}/apps/api/{{cookiecutter.__api_package_name}}/models/: __init__.py  chat.py  generic.py  message.py  rag_document.py  terms.py  user.py
{{cookiecutter.project_name}}/apps/api/{{cookiecutter.__api_package_name}}/routers/v1/: __init__.py
{{cookiecutter.project_name}}/apps/api/{{cookiecutter.__api_package_name}}/routers/v1/chats/: models.py  router.py
{{cookiecutter.project_name}}/apps/api/{{cookiecutter.__api_package_name}}/routers/v1/chats/converse/: models.py  router.py
{{cookiecutter.project_name}}/apps/api/{{cookiecutter.__api_package_name}}/routers/v1/rag_documents/: __init__.py  rag_file_parsers.py  rag_models.py  rag_router.py  rag_services.py
{{cookiecutter.project_name}}/apps/api/{{cookiecutter.__api_package_name}}/routers/v1/terms/: models.py
{{cookiecutter.project_name}}/docs/: LANGCHAIN_1X_MIGRATION.md  RAG_IMPLEMENTATION.md
{{cookiecutter.project_name}}/terraform/aws/envs/_env/apps/: api.hcl
{{cookiecutter.project_name}}/terraform/azure/envs/_env/apps/: api.hcl
{{cookiecutter.project_name}}/terraform/gcp/envs/_env/apps/: api.hcl
