{% if cookiecutter.pip == "poetry" -%}

[build-system]
requires = ["poetry-core"] # a list of dependencies required to build the package
build-backend = "poetry.core.masonry.api" # the Python object used to perform the build process

[tool.poetry]
name = "{{ cookiecutter.__api_project_name }}"
description = "{{ cookiecutter.__api_project_title }} application"
version = "0.0.0"
authors = ["SoftServe CoE Solutions <coe-solutions@softserveinc.com>"]
keywords = ["chatbot", "assistant", "generative", "ai", "llm", "gpt"]
readme = "README.md"
packages = [{ include = "{{ cookiecutter.__api_package_name }}" }]

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
pydantic = "^2.10"
python-dotenv = "^1.0.1"
fastapi = "^0.123.0"
# LangChain 1.x ecosystem - Latest versions
langchain = "^1.1"  # Latest: 1.1.0
langchain-core = "^1.1"  # Latest: 1.1.0
langchain-community = "^0.4"  # Latest: 0.4.1 (no 1.0 yet)
langchain-classic = "^1.0"  # For legacy chains (LLMChain, ConversationalRetrievalChain)
langgraph = "^1.0"  # Modern agent framework - Latest: 1.0.4
uvicorn = "^0.38.0"
pyjwt = "^2.9.0"
pyyaml = "^6.0.2"
python-multipart = "^0.0.20"
{%- if cookiecutter.auth == "local" %}
argon2-cffi = "^25.1.0"
{%- elif cookiecutter.auth == "keycloak" %}
python-keycloak = "^4.0.0"
{%- endif %}
# Database dependencies (PostgreSQL)
asyncpg = "^0.30.0"
{%- if cookiecutter.enable_rag %}
pgvector = "^0.3.5"
{%- endif %}
sqlmodel = "^0.0.22"
sqlalchemy = { version = "^2.0.35", extras = ["asyncio"] }
# LLM Provider integrations (LangChain 1.x compatible)
langchain-openai = "^1.1"
langchain-google-vertexai = "^3.1"
langchain-aws = "^1.1"
boto3 = "^1.40.0"
botocore = "^1.40.0"
anthropic = "^0.75.0"
transformers = "^4.46.0"
{%- if cookiecutter.enable_rag %}
# RAG document parsing dependencies (optional)
pypdf = "^5.1.0"  # PDF parsing
python-docx = "^1.1.0"  # DOCX parsing
{%- endif %}
google-cloud-storage = ">=3.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.13.3"
{%- if cookiecutter.enable_mypy %}
mypy = "^1.13.0"
{%- endif %}
{%- if not cookiecutter.__monorepo %}
pre-commit = "^4.0.0"
{%- endif %}
pylint = "^3.3.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.0.0"
isort = "^6.0.0"
black = "^25.1.0"
flake8 = "^7.1.0"
types-pyyaml = "^6.0.12.20240917"
boto3-stubs = "^1.40.0"

{% else -%}
[build-system]
requires = ['setuptools'] # a list of dependencies required to build the package
build-backend = 'setuptools.build_meta' # the Python object used to perform the build process

[project]
name = "{{ cookiecutter.__api_project_name }}"
description = "{{ cookiecutter.__api_project_title }} application"
version = "0.0.0"
authors = [{name = "SoftServe CoE Solutions", email = "coe-solutions@softserveinc.com"}]
keywords = ["chatbot", "assistant", "generative", "ai", "llm", "gpt"]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
  "pydantic>=2.10, <3",
  "python-dotenv>=1.0.1, <2",
  "fastapi>=0.123.0, <0.124",
  # LangChain 1.x ecosystem
  "langchain>=1.1, <1.2",
  "langchain-core>=1.1, <1.2",
  "langchain-community>=0.4, <0.5",
  "langchain-classic>=1.0, <1.1",
  "langgraph>=1.0, <1.1",
  "uvicorn>=0.38.0, <0.39",
  "pyjwt>=2.9.0, <3",
  "pyyaml>=6.0.2, <7",
  "python-multipart>=0.0.20, <0.1",
  {%- if cookiecutter.auth == "local" %}
  "argon2-cffi>=25.1.0, <26",
  {%- elif cookiecutter.auth == "keycloak" %}
  "python-keycloak>=4.0.0, <5",
  {%- endif %}
  # Database dependencies (PostgreSQL)
  "asyncpg>=0.30.0, <0.31",
  {%- if cookiecutter.enable_rag %}
  "pgvector>=0.3.5, <0.4",
  {%- endif %}
  "sqlmodel>=0.0.22, <0.1",
  "sqlalchemy[asyncio]>=2.0.35, <2.1",
  # LLM Provider integrations (LangChain 1.x compatible)
  "langchain-openai>=1.1, <1.2",
  "langchain-google-vertexai>=3.1, <4",
  "langchain-aws>=1.1, <1.2",
  "boto3>=1.40.0, <2",
  "botocore>=1.40.0, <2",
  "anthropic>=0.75.0, <1",
  "transformers>=4.46.0, <5",
  {%- if cookiecutter.enable_rag %}
  # RAG document parsing dependencies (optional)
  "pypdf>=5.1.0, <6",
  "python-docx>=1.1.0, <2",
  {%- endif %}
  "google-cloud-storage>=3.0",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.13.3, <1.14",
  {%- if cookiecutter.enable_mypy %}
  "mypy>=1.13.0, <1.14",
  {%- endif %}
  {%- if not cookiecutter.__monorepo %}
  "pre-commit>=4.0.0, <5",
  {%- endif %}
  "pylint>=3.3.0, <4",
  "pytest>=8.3.0, <9",
  "pytest-asyncio>=0.26.0, <0.27",
  "pytest-cov>=6.0.0, <7",
  "isort>=6.0.0, <7",
  "black>=25.1.0, <26",
  "flake8>=7.1.0, <8",
  "types-pyyaml>=6.0.12.20240917",
  "boto3-stubs>=1.40.0, <2",
]

[tool.setuptools.packages.find]
include = ["{{ cookiecutter.__api_package_name }}", "{{ cookiecutter.__api_package_name }}.*"]

{% endif -%}

[tool.black]
line-length = 120
target-version = ["py311", "py312", "py313"]
include = "\\.pyi?$"

{%- if cookiecutter.enable_mypy %}

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "api"
python_version = "3.11"
strict_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = false
# for strict mypy: (this is the tricky one :-))
# disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["asyncpg.*"{% if cookiecutter.enable_rag %}, "pgvector.*"{% endif %}{% if cookiecutter.auth == "keycloak" %}, "jwcrypto.*", "keycloak.*"{% endif %}]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

{%- endif %}

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require LLM credentials, deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
branch = true  # Enable branch coverage
omit = ["tests/*"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self\\.debug",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",

  # Don't complain about abstract methods, they aren't run:
  "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "coverage/lcov-report"

[tool.coverage.json]
output = "coverage/coverage-final.json"

[tool.coverage.lcov]
output = "coverage/lcov.info"
